2004-06-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-applets-locations.

2004-06-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Marked setup-tools-backends as
	proposed.

2004-06-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added hydrogen to extras.

2004-06-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: metacity has been branched.

2004-06-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-schedule to extras.

2004-06-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gail has been branched.

2004-06-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Marked gnome-volume-manager as
	proposed.

2004-06-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added glom to extras.

2004-06-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Marked gnome-system-tools as proposed.

2004-06-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added a GNOME 2.8 "proposed" section.
	Added gnome-nettool and marked it proposed.
	Marked evolution, evolution-exchange, gtkhtml, gal and
	evolution-data-server as proposed.
	Marked evolution-webcal as proposed.

2005-06-01  Rodney Dawes  <dobey@novell.com>

	* translation-status.xml: Add evolution-exchange to extras

2004-05-27  Rodney Dawes  <dobey@novell.com>

	* translation-status.xml: Acme is part of control-center now
	bonobo-config code hasn't been touched in 3 years, it's dead
	Add evolution-webcal
	Add comment section with local variables for emacs xml mode

2004-05-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added vino.

2004-05-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added orca.

2004-05-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: procman has been branched.

2004-05-17  Christian Rose  <menthos@menthos.com>
