@@ -358,6 +358,17 @@
       </component>
     </version>
   </module>
+  <module name="evolution-brainread">
+    <version release="gnome-2.8">
+      <component name="evolution-brainread" dir="evolution-brainread" group="extras">
+	<podir dir="po"/>
+	<potname name="evolution-brainread-1.0.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="evolution-data-server">
     <version release="gnome-2.8">
       <component name="evolution-data-server" dir="evolution-data-server" group="proposed">
