@@ -1,3 +1,7 @@
+2004-06-29  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added evolution-brainread.
+
 2004-06-24  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added gnome-applets-locations.
